Java 16; Gradle 7.1; README clean up