@@ -8,41 +8,27 @@ subprojects {
     }
 
     configure<JavaPluginExtension> {
-        sourceCompatibility = JavaVersion.VERSION_15
-        targetCompatibility = JavaVersion.VERSION_15
+        toolchain {
+            languageVersion.set(JavaLanguageVersion.of(16))
+        }
     }
 
     tasks {
-        /**
-         * Enable Java language preview features (so we can "records")
-         */
-        withType(JavaCompile::class.java) {
-            options.compilerArgs.addAll(arrayOf("--enable-preview"))
-        }
 
         withType(Test::class.java) {
-            jvmArgs = listOf("--enable-preview")
             useJUnitPlatform()
-        }
-
-        named<CreateStartScripts>("startScripts") {
-            defaultJvmOpts = listOf("--enable-preview")
-        }
-
-        named<JavaExec>("run") {
-            jvmArgs = listOf("--enable-preview")
         }
     }
 }
 
 project(":completable-future") {
-    configure<ApplicationPluginConvention> {
-        mainClassName = "dgroomes.CompletableFuturesMain"
+    configure<JavaApplication> {
+        mainClass.set("dgroomes.CompletableFuturesMain")
     }
 }
 
 project(":interrupts") {
-    configure<ApplicationPluginConvention> {
-        mainClassName = "dgroomes.InterruptsMain"
+    configure<JavaApplication> {
+        mainClass.set("dgroomes.InterruptsMain")
     }
 }
